# Vulfy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTIFICATION_FIXES.md  README.md  example-automation.toml  requirements.txt  vulfy-automation.toml
.github/workflows/: ci.yml  dependency-update.yml  docker.yml  release.yml
docs/: README.md
docs/api-reference/: configuration-schema.md
docs/developer-guide/: architecture.md
docs/tutorials/: ci-cd-integration.md  quick-start.md
docs/user-guide/: automation-overview.md  cli-reference.md  getting-started.md  output-formats.md
src/: cli.rs  error.rs  main.rs  matcher.rs  reporter.rs  types.rs
src/automation/: git_monitor.rs  mod.rs  policy.rs  scheduler.rs  webhooks.rs
src/scanner/: cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  npm.rs  php.rs  python.rs  ruby.rs  rust.rs
