[package]
name = "vulfy"
version = "0.1.0"
edition = "2021"
description = "Cross-language CLI-based package version scanner for detecting known vulnerabilities"
license = "MIT"
authors = ["MindPatch <mindpatch@example.com>"]
homepage = "https://github.com/MindPatch/Vulfy"
repository = "https://github.com/MindPatch/Vulfy"
documentation = "https://github.com/MindPatch/Vulfy#readme"
keywords = ["security", "vulnerability", "scanner", "cli", "automation"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
readme = "README.md"
exclude = [
    "vulfy-workspace/",
    "vulfy-exports/",
    "automation-results.json",
    "vulfy-scan-result.json",
    "test_*",
    "assets/",
    ".github/",
]

[[bin]]
name = "vulfy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for OSV.dev API
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# File system operations
walkdir = "2.4"
glob = "0.3"

# XML parsing for pom.xml
quick-xml = "0.36"

# TOML parsing for Cargo.lock
toml = "0.8"

# Async utilities
futures = "0.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID support
uuid = { version = "1.0", features = ["v4", "serde"] }

# Git operations
git2 = "0.18"

# Job scheduling
tokio-cron-scheduler = "0.10"

# Cron expression parsing
cron = "0.12"

# Regular expressions for policy matching
regex = "1.10"

# URL handling for webhooks
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
